// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle - Snapshots > matches snapshot for default size 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-2 min-w-9"
  data-state="off"
  type="button"
>
  Default Size
</button>
`;

exports[`Toggle - Snapshots > matches snapshot for default variant 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-2 min-w-9"
  data-state="off"
  type="button"
>
  Default
</button>
`;

exports[`Toggle - Snapshots > matches snapshot for disabled state 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-2 min-w-9"
  data-disabled=""
  data-state="off"
  disabled=""
  type="button"
>
  Disabled
</button>
`;

exports[`Toggle - Snapshots > matches snapshot for large size 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-10 px-2.5 min-w-10"
  data-state="off"
  type="button"
>
  Large
</button>
`;

exports[`Toggle - Snapshots > matches snapshot for outline variant 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input shadow-sm hover:bg-accent hover:text-accent-foreground h-9 px-2 min-w-9"
  data-state="off"
  type="button"
>
  Outline
</button>
`;

exports[`Toggle - Snapshots > matches snapshot for pressed state 1`] = `
<button
  aria-pressed="true"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-2 min-w-9"
  data-state="on"
  type="button"
>
  Pressed
</button>
`;

exports[`Toggle - Snapshots > matches snapshot for small size 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-8 px-1.5 min-w-8"
  data-state="off"
  type="button"
>
  Small
</button>
`;

exports[`Toggle - Snapshots > matches snapshot with all props combined 1`] = `
<button
  aria-pressed="true"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input shadow-sm hover:bg-accent hover:text-accent-foreground h-10 px-2.5 min-w-10 custom-toggle"
  data-state="on"
  type="button"
>
  Combined Props
</button>
`;

exports[`Toggle - Snapshots > matches snapshot with custom className 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-2 min-w-9 custom-class"
  data-state="off"
  type="button"
>
  Custom
</button>
`;

exports[`Toggle - Snapshots > matches snapshot with default props 1`] = `
<button
  aria-pressed="false"
  class="cursor-pointer inline-flex items-center justify-center gap-2 rounded-md text-sm font-medium transition-colors bg-transparent hover:bg-muted hover:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 data-[state=on]:bg-accent data-[state=on]:text-accent-foreground [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 h-9 px-2 min-w-9"
  data-state="off"
  type="button"
>
  Default Toggle
</button>
`;
